<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Debts</string>

    <!-- Application modes -->
    <string name="mode_barcode_scanning_title">Barcode scanning</string>
    <string name="mode_barcode_scanning_subtitle">Read data encoded in most standard barcode formats</string>
    <string name="mode_show_all_clients_title">Clients</string>
    <string name="mode_show_all_clients_subtitle">Shows detailed info about all clients</string>
    <string name="mode_add_new_client_title">Add new client</string>
    <string name="mode_add_new_client_subtitle">Adds new client to DB</string>
    <string name="mode_show_all_goods_title">Goods</string>
    <string name="mode_show_all_goods_subtitle">Shows detailed info about all goods</string>

    <!-- Common strings -->
    <string name="home">Home</string>

    <string name="contact_phone_text">Contact phone</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hide">Hide</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="copied">Copied</string>
    <string name="enter_name">Enter name</string>
    <string name="proceed">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="gram">Gram</string>
    <string name="quantity">Quantity</string>

    <string name="active">Active</string>
    <string name="not_started">Not started</string>
    <string name="closed">Closed</string>

    <string name="search_by_name_or_surname_or_phone">Search</string>
    <string name="search_by_barcode">Search by barcode</string>
    <string name="search_by_barcode_or_title">Search by barcode or title</string>

    <string name="barcode_image_description">Barcode image</string>

    <string name="scan_barcode">Scan barcode</string>
    <string name="select_from_list">Select from the list</string>
    <string name="select_type_of_good_adding">Select a type of good adding</string>

    <!-- Common string templates -->
    <string name="name_template_string">Name: %s</string>
    <string name="receipt_number_template_string">Receipt #%d</string>
    <string name="seller_template_string">Seller: %s</string>
    <string name="created_at_template_string">Created at: %s</string>
    <string name="updated_at_template_string">Updated at: %s</string>
    <string name="measurement_unit_template_string">Measurement unit: %s</string>

    <!-- Common validation strings -->
    <string name="required_text">required</string>
    <string name="wrong_length_text">Wrong length</string>
    <string name="blank_text_error">Text must not be empty</string>
    <string name="wrong_length_error">Text length is too long</string>
    <string name="blank_text_or_wrong_length">Blank text or wrong length</string>
    <string name="not_valid_first_name">Not valid first name provided</string>
    <string name="not_valid_last_name">Not valid last name provided</string>
    <string name="not_valid_phone">Not valid phone provided</string>

    <!-- Debts -->
    <string name="client_debts_view_title">Debts</string>
    <string name="client_debts_text_view_YES_value">Active debts: yes</string>
    <string name="client_debts_text_view_NO_value">Active debts: no</string>
    <string name="all_debts_count">Count of all debts: %d</string>
    <string name="active_debts_count_text">Active debts count</string>
    <string name="add_debt_activity_title">New debt creation</string>

    <!-- Purchaser (aka Client) -->
    <string name="client_full_name_text">Client\'s full name</string>
    <string name="phone_example_text">example, +375 (xx) xxx-xx-xx</string>
    <string name="purchaser_added_txt">Purchaser added successfully</string>
    <string name="purchaser_removed_text">Purchaser removed</string>
    <string name="all_clients_tooltip_create_new_receipt_text">Create new receipt</string>
    <string name="client_phone_view_prefix">Phone: %1$s</string>
    <string name="add_client_activity_title">Add new purchaser</string>
    <string name="add">Add</string>
    <string name="add_client_txt_enter_first_name_label">Enter first name</string>
    <string name="add_client_txt_enter_last_name_label">Enter last name</string>
    <string name="add_client_txt_enter_phone_label">Enter phone</string>
    <string name="add_one_more_purchaser_question">Do you want to add one more purchaser?</string>
    <string name="purchaser_removal_confirmation_text">Confirm purchaser removal</string>
    <string name="purchaser_removal_confirmation_question">Are you sure you want to remove the purchaser?</string>
    <string name="found_client_template_string">Found clients: %d</string>

    <!-- Good -->
    <string name="add_good_title">Add new good</string>
    <string name="goods_selection_title">Add goods to receipt</string>
    <string name="good_found">Good found</string>
    <string name="good_not_found">Good not found</string>
    <string name="good_added_text">Good added</string>
    <string name="good_updated_text">Good updated</string>
    <string name="good_removed_text">Good removed</string>
    <string name="good_added_successfully_text">Good added successfully</string>
    <string name="add_one_more_good_question">Do you want to add one more good?</string>
    <string name="add_good_text">Add good</string>
    <string name="add_good_options_text">Select adding method</string>
    <string name="add_good_txt_enter_name_label">Enter title</string>
    <string name="add_good_txt_enter_barcode_label">Enter barcode</string>
    <string name="barcode_uniqueness_error">Already existing barcode </string>
    <string name="good_name_must_not_be_empty">Good name must not be empty</string>
    <string name="good_barcode_must_not_be_empty">Good barcode must not be empty</string>
    <string name="good_name_length_must_be_correct">Good name must not be longer than 64 characters</string>
    <string name="good_barcode_length_must_be_correct">Good barcode must not be longer than 64 characters</string>
    <string name="go_to_goods">Go to goods</string>
    <string name="found_good_template_string">Found goods: %d</string>
    <string name="total_goods_template_string">Total goods: %d</string>
    <string name="add_goods_to_receipt">Add goods (0 pcs) to receipt</string>
    <string name="add_goods_to_receipt_template">Add goods (%d pcs) to receipt</string>

    <string name="good_measurement_unit">Measurement unit</string>
    <string name="select_measurement_units_text">Select unit of measurement</string>
    <string name="not_selected_unit_of_measurement">Not selected unit of measurement</string>

    <string name="barcode_result_card_txt_input_good_name_hint">Enter good name</string>
    <string name="barcode_result_card_txt_input_good_name_update_hint">Good does not have name. Enter name to improve readability</string>

    <string name="good_removal_confirmation_text">Confirm good removal</string>
    <string name="good_removal_confirmation_question">Are you sure you want to remove the good?</string>

    <string name="total_goods_count_is_zero">Total goods count: 0</string>

    <!-- Settings -->
    <string name="settings_title">Debts Settings</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>

    <string name="pref_key_seller_id" translatable="false">seller_id</string>

    <!-- Strings for camera settings -->
    <string name="pref_category_camera">Camera</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>

    <!-- Strings for barcode detection settings -->
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="prompt_searching">Searching&#8230;</string>

    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
</resources>