<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_good"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".good.ui.add.AddGoodActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_good_layout_input_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/add_good_txt_enter_name_label"
            app:counterEnabled="true"
            app:counterMaxLength="64"
            app:endIconMode="clear_text"
            app:helperText="@string/required_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_good_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_good_layout_input_barcode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/add_good_txt_enter_barcode_label"
            app:counterEnabled="true"
            app:counterMaxLength="64"
            app:endIconMode="clear_text"
            app:helperText="@string/required_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_good_input_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_good_layout_input_good_measurement_unit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:helperText="@string/required_text">

            <AutoCompleteTextView
                android:id="@+id/add_good_input_good_measurement_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/good_measurement_unit"
                android:inputType="none"
                android:labelFor="@+id/add_good_layout_input_good_measurement_unit"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_good_btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/add"
            app:backgroundTint="@color/purple_lighten_2"
            app:icon="@drawable/ic_add_list_24"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />
    </LinearLayout>

</LinearLayout>