<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/barcode_result_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/barcode_result_card_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/barcode_media_height"
                android:contentDescription="@string/barcode_image_description"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="6dp">

                <!-- Title, secondary and supporting text -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/barcode_result_card_tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/barcode_result_card_chip_good_existence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:checkable="false"
                        android:text="@string/good_not_found"
                        app:chipIcon="@drawable/ic_close_24"
                        app:chipStrokeColor="@color/white"
                        app:chipStrokeWidth="1dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/barcode_result_card_tv_secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/barcode_result_card_tv_supporting_line_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/barcode_result_card_tv_supporting_line_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <!-- Good name input-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/barcode_result_card_txt_layout_good_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/barcode_result_card_txt_input_good_name_hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="64"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/barcode_result_card_txt_good_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/barcode_result_card_txt_layout_good_measurement_unit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <AutoCompleteTextView
                        android:id="@+id/barcode_result_card_tv_good_measurement_unit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/good_measurement_unit"
                        android:inputType="none"
                        android:labelFor="@+id/barcode_result_card_txt_layout_good_measurement_unit" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/barcode_result_card_btn_add"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/save" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/barcode_result_card_btn_ok"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/hide" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/barcode_result_card_btn_update"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/update"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
