<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/search_by_barcode"
        app:endIconMode="clear_text"
        app:hintEnabled="true"
        app:startIconContentDescription="@string/search_by_barcode"
        app:startIconDrawable="@drawable/ic_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/all_goods_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.Chip
        android:id="@+id/good_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:text="@string/found_good_template_string"
        android:textAlignment="textEnd" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_goods_rv_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/all_goods_parent_fab_add_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple_lighten_3"
                android:backgroundTint="@color/purple_lighten_2"
                android:contentDescription="@string/add_good_text"
                app:borderWidth="0dp"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_add_24" />

            <LinearLayout
                android:id="@+id/all_goods_fab_sub_actions_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/all_goods_parent_fab_add_good"
                app:layout_constraintRight_toRightOf="parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/all_goods_fab_scan_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/mode_barcode_scanning_title"
                    android:src="@drawable/ic_barcode_reader_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/all_goods_fab_add_good_manually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/add_good_text"
                    android:src="@drawable/ic_add_list_24" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>