<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    tools:context=".purchaser.ui.add.AddClientActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/add_client_txt_enter_first_name_label"
            app:counterEnabled="true"
            app:counterMaxLength="64">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/add_client_txt_enter_last_name_label"
            app:counterEnabled="true"
            app:counterMaxLength="64">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/add_client_txt_enter_phone_label"
            app:helperText="+375"
            app:placeholderText="29 1594702"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/material_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_client_btn_text"
            android:paddingVertical="10dp"
            app:backgroundTint="@color/purple_lighten_2"
            app:icon="@drawable/ic_baseline_person_add_24"
            app:iconGravity="textStart"
            app:iconPadding="8dp"/>
    </LinearLayout>
</LinearLayout>