<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goods_selection_c_layout_client_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/view_item_padding_horizontal"
        android:layout_marginRight="@dimen/view_item_padding_horizontal"
        android:layout_marginBottom="14dp">

        <ImageView
            android:id="@+id/goods_selection_iv_person_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/goods_selection_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_person_24" />

        <TextView
            android:id="@+id/goods_selection_tv_client_full_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:fontFamily="google-sans-medium"
            android:paddingStart="@dimen/view_item_padding_horizontal"
            android:paddingEnd="@dimen/view_item_padding_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/view_item_title_size"
            app:layout_constraintLeft_toRightOf="@+id/goods_selection_iv_person_icon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginBottom="4dp"
        android:background="@color/stroke_color" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/search_by_barcode_or_title"
        app:endIconMode="clear_text"
        app:hintEnabled="true"
        app:startIconContentDescription="@string/search_by_barcode_or_title"
        app:startIconDrawable="@drawable/ic_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goods_selection_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.Chip
        android:id="@+id/goods_selection_good_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:text="@string/found_good_template_string"
        android:textAlignment="textEnd" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/goods_selection_rv_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="24dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/goods_selection_add_goods_to_receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/add_goods_to_receipt"
                app:backgroundTint="@color/purple_lighten_2"
                app:icon="@drawable/ic_person_add_24"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>